--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "dependencies": {
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
+    "@fortawesome/fontawesome-svg-core": "^6.2.0",
+    "@fortawesome/free-solid-svg-icons": "^6.2.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@material-ui/core": "latest",
     "@material-ui/x-grid": "4.0.0-alpha.25",
     "@material-ui/x-grid-data-generator": "^4.0.0-alpha.37",
@@ -26,12 +29,15 @@
     "@syncfusion/ej2-react-popups": "^19.4.52",
     "@syncfusion/ej2-react-richtexteditor": "^19.4.50",
     "@syncfusion/ej2-react-schedule": "^19.4.50",
+    "axios": "^0.27.2",
     "chart.js": "^3.8.0",
     "chartjs-plugin-datalabels": "^2.0.0",
     "faker": "5.5.3",
+    "js-cookie": "^3.0.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^4.2.0",
     "react-dom": "^18.0.0",
+    "react-hook-form": "^7.34.2",
     "react-icons": "^4.3.1",
     "react-loader-spinner": "^5.1.7-beta.1",
     "react-loading-skeleton": "^3.1.0",
@@ -42,11 +48,13 @@
     "react-select": "^5.4.0",
     "react-select-async-paginate": "^0.6.2",
     "react-select-fetch": "^0.4.0",
+    "react-toastify": "^9.0.8",
     "recharts": "^2.1.11"
   },
   "devDependencies": {
     "@rollup/pluginutils": "^4.2.1",
     "@types/faker": "5.5.3",
+    "@types/js-cookie": "^3.0.2",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@vitejs/plugin-react": "^1.3.0",
